<resources>
    <string name="app_name">ChatClient</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login with Facebook</string>
    <string name="Friends_list">Friends list</string>
    <string name="Group_chat">Group chat</string>
    <string name="join">Join</string>
    <string name="back">Back</string>
    <string name="Send_file">Send file</string>
    <string name="Send">Send</string>
    <string name="publish_to_wall">Publish message to wall</string>
    <string name="notification">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_group_chat">GroupChatActivity</string>
    <string name="leave_group">Leave Group</string>
    <string name="invite_user">Invite user to join group</string>
    <string name="facebook_app_id">231248230572173</string>
</resources>
