<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ro.pub.cs.chatclient.ChatActivity"
    tools:showIn="@layout/activity_chat">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/chat_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="9dp"
            android:text=""
            android:textColor="#404040"
            android:textSize="20sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/back" />

    </RelativeLayout>

    <EditText
        android:id="@+id/messages_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:editable="false"
        />

    <Button
        android:id="@+id/send_file_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Send_file"
        android:textAllCaps="false"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/private_message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:hint="Enter your message..."
            />
        <Button
            android:id="@+id/sent_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Send"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <Button
        android:id="@+id/publish_discussion_to_wall_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/publish_to_wall"
        android:textAllCaps="false"
        />

</LinearLayout>
